<resources>
    <string name="app_name">FirstApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="name_required">Name is required</string>
    <string name="logged_in">Logged in</string>
    <string name="no_match">No match</string>
    <string name="login">Login</string>
    <string name="go_to_register">Go To Register</string>
    <string name="register">Register</string>
    <string name="go_to_login">Go to Login</string>
    <string name="name">Name</string>
    <string name="registered_in">Registered</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="loggout">Loggout</string>

    <string name="task_name">Task name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="want_to_delete">Do you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="clean_list">Clean list</string>

</resources>