<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="1500dp"
        android:layout_height="115dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp">


        <EditText
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:ems="10"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:ems="10"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:text="@string/login" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_goto_register"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/go_to_register" />


</LinearLayout>